# cpp_toy_gameoflife

./: CMakeLists.txt  README.md  gof.h  gof_tests.cpp
